# carmenta

./: .gitignore  Cargo.toml  LICENSE  README.md  carmenta.spec  install.sh  install_extension.sh  io.github.szymonwilczek.carmenta.yml  org.carmenta.App.yml  package_extension.sh
data/: io.github.szymonwilczek.carmenta.desktop  io.github.szymonwilczek.carmenta.metainfo.xml  org.carmenta.App.desktop
extension/: extension.js  metadata.json
extension/schemas/: org.gnome.shell.extensions.carmenta.gschema.xml
flatpak/: io.github.szymonwilczek.carmenta.yml
flatpak/scripts/: merge_manifest.py
scripts/: README  install_app.sh  install_extension.sh  merge_manifest.py  test_flathub.sh
src/: app.rs  dbus.rs  history.rs  main.rs  window.rs
src/ui/: emoji_data.rs  emoji_grid.rs  gif_data.rs  gif_grid.rs  kaomoji_data.rs  kaomoji_grid.rs  mod.rs  symbols_data.rs  symbols_grid.rs
